--- a/TrackDearApp/UI/GetLocation.html
+++ b/TrackDearApp/UI/GetLocation.html
@@ -39,17 +39,18 @@
             var infoWindow = new google.maps.InfoWindow;
 
             // Change this depending on the name of your PHP or XML file
-            downloadUrl('https://storage.googleapis.com/mapsdevsite/json/mapmarkers2.xml', function (data) {
-                var xml = data.responseXML;
-                var markers = xml.documentElement.getElementsByTagName('marker');
+            downloadUrl('http://localhost:1240/api/Tracking/GetUserLoc?mobileno=7777777777', function (data) {
+                //var xml = data.responseXML;
+                var JSON = data;
+                var markers = JSON.documentElement.getElementById('marker');
                 Array.prototype.forEach.call(markers, function (markerElem) {
-                    var id = markerElem.getAttribute('id');
-                    var name = markerElem.getAttribute('name');
-                    var address = markerElem.getAttribute('address');
-                    var type = markerElem.getAttribute('type');
+                    //var id = markerElem.getAttribute('id');
+                    //var name = markerElem.getAttribute('name');
+                    //var address = markerElem.getAttribute('address');
+                    //var type = markerElem.getAttribute('type');
                     var point = new google.maps.LatLng(
-                        parseFloat(markerElem.getAttribute('lat')),
-                        parseFloat(markerElem.getAttribute('lng')));
+                        parseFloat(markerElem.getAttribute('Latitude')),
+                        parseFloat(markerElem.getAttribute('Longitude')));
 
                     var infowincontent = document.createElement('div');
                     var strong = document.createElement('strong');
